Fix misaligned todo items and run build

--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -68,7 +68,7 @@ li {
   justify-content: space-between;
   align-items: center;
   font-family: "Lato", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 100;
 }
 
@@ -93,5 +93,5 @@ li {
 .btn {
   border: none;
   font-size: 20px;
-  color: rgb(66, 60, 60);
+  color: rgb(139, 139, 139);
 }
